# FMNN25-grupp3-2023

./: README.md
project1/: model_weights.epochs.100.lr.0.7.bsize.128.npz  nn _updated.ipynb  nn.ipynb  nn_final.ipynb
project1/Lina & Dumitra/: model_weights.epochs.100.lr.0.01.bsize.32.npz  model_weights.epochs.100.lr.0.01.bsize.64.npz  model_weights.epochs.100.lr.0.1.bsize.32.npz  model_weights.epochs.100.lr.0.7.bsize.32.npz  model_weights.epochs.100.lr.0.7.bsize.64.npz  model_weights.epochs.1000.lr.0.01.bsize.32.npz  model_weights.epochs.1000.lr.0.01.bsize.64.npz
project1/filippa/: model_weights.epochs.100.lr.0.01.bsize.128.npz  model_weights.epochs.100.lr.0.1.bsize.1.npz  model_weights.epochs.100.lr.0.1.bsize.128.npz
project1/jacob/: model_weights.epochs.100.lr.0.01.bsize.8.npz  model_weights.epochs.100.lr.0.1.bsize.8.npz  model_weights.epochs.100.lr.0.7.bsize.1.npz  model_weights.epochs.100.lr.0.7.bsize.8.npz
project2/: README.md  pyproject.toml
project2/docs/: placeholder.md
project2/old_files/: old_code.py  old_quasi_methods.py  test_wolfe_search.py
project2/optimization/: app.py  chebyquad_problem.py  dumitras_quasi_methods.py  methods.py  optimization_problem.py  quasi_methods.py  temp_test.py  test_wolfe_search.py
project2/tests/: test_classical_newton.py  test_optimization_problem.py
project3/: README.md  main.py  main2.py  room.py
project3/examples/: coo2csr.py  csrsolve.py  dense2csr.py  failure.py  sendrecv.py
